--- a/server/views/bassReferral/bassAreaCheck.pug
+++ b/server/views/bassReferral/bassAreaCheck.pug
@@ -27,7 +27,7 @@ block content
                         div.bold#proposedCounty #{bassRequest.proposedCounty}
             else
                 div.pure-u-1-2
-                div Offender does not have a preferred BASS area
+                div#noSpecificAreaMessage Offender does not have a preferred BASS area
 
         div.pure-u-1.pure-u-md-1-2
 
