--- a/server/views/bassReferral/includes/bassRequestActions.pug
+++ b/server/views/bassReferral/includes/bassRequestActions.pug
@@ -7,7 +7,7 @@ div
                     form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/withdraw/" + bookingId)
                         input(type="hidden" name="_csrf" value=csrfToken)
                         input(type="hidden" name="withdrawalType" value="offer")
-                        button#withdrawConsent.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw BASS request
+                        button#withdrawBassOffer.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw BASS request
 
             div.pure-u-1.pure-u-md-1-2
                 p Offender has withdrawn BASS request
@@ -15,16 +15,16 @@ div
                     form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/withdraw/"+bookingId)
                         input(type="hidden" name="_csrf" value=csrfToken)
                         input(type="hidden" name="withdrawalType" value="request")
-                        button#withdrawAddress.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw BASS request
+                        button#withdrawBassRequest.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Withdraw BASS request
     else
         div.pure-g
             div.pure-u-1.pure-u-md-1-2
                 p Enter a new BASS request
-                a.largeMarginBottom.button(href="/hdc/bassReferral/bassRequest/" + bookingId) Add a new BASS request
+                a#addNewBass.largeMarginBottom.button(href="/hdc/bassReferral/bassRequest/" + bookingId) Add a new BASS request
 
             div.pure-u-1.pure-u-md-1-2
                 p Reinstate this request
                 div
                     form(method="post", name="withdrawBass", action="/hdc/bassReferral/bassOffer/reinstate/" + bookingId)
                         input(type="hidden" name="_csrf" value=csrfToken)
-                        button#withdrawAddress.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate BASS request
+                        button#reinstateBass.button.largeMarginBottom(type='submit', role='button', data-element-id="continue-button") Reinstate BASS request
