--- a/server/views/bassReferral/rejected.pug
+++ b/server/views/bassReferral/rejected.pug
@@ -17,13 +17,13 @@ block content
                 p.smallMarginBottom Area
                 div.paddingBottom
                     if bassRequest.proposedCounty
-                        p#rejectedCounty.bold.noMargin #{bassRequest.proposedCounty}
+                        p#proposedCounty.bold.noMargin #{bassRequest.proposedCounty}
                     if bassRequest.proposedTown
-                        p#rejectedTown.bold.noMargin #{bassRequest.proposedTown}
+                        p#proposedTown.bold.noMargin #{bassRequest.proposedTown}
 
             div.pure-u-1.pure-u-md-1-2.paddingBottom
                 p.smallMarginBottom Reason for rejection:
-                    p.bold #{bassAreaCheck.bassAreaReason}
+                    p#bassAreaReason.bold #{bassAreaCheck.bassAreaReason}
 
 
         div.largePaddingBottom
