--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -18,26 +18,26 @@ block content
                 span Requested area
             div.pure-u-1.pure-u-md-2-3.paddingTop#bassRequest
                 if bassRequest.proposedTown
-                    div.bold #{bassRequest.proposedTown}
+                    div#proposedTown.bold #{bassRequest.proposedTown}
                 if bassRequest.proposedCounty
-                    div.bold #{bassRequest.proposedCounty}
+                    div#proposedCounty.bold #{bassRequest.proposedCounty}
 
             div.pure-u-1.pure-u-md-1-3.paddingTop
                 span BASS outcome
-            div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferStatus
+            div.pure-u-1.pure-u-md-2-3.paddingTop
 
                 if licenceStatus.decisions.bassAreaNotSuitable
-                    div.bold BASS area rejected
+                    div#bassOfferOutcome.bold BASS area rejected
 
                 -var offer = licenceStatus.decisions.bassAccepted
                 if offer === 'Yes'
-                    div.bold Offer made and property available
+                    div#bassOfferOutcome.bold Offer made and property available
                 else if offer === 'Waiting'
-                    div.bold Offer made and on waiting list
+                    div#bassOfferOutcome.bold Offer made and on waiting list
                 else if offer === 'Unsuitable'
-                    div.bold Not suitable for BASS
+                    div#bassOfferOutcome.bold Not suitable for BASS
                 else if offer === 'Unavailable'
-                    div.bold Address not available
+                    div#bassOfferOutcome.bold Address not available
 
             if bassOffer.bassOfferDetails
                 div.pure-u-1.pure-u-md-1-3.paddingTop
@@ -45,7 +45,7 @@ block content
                 div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferDetails
                     div.bold #{bassOffer.bassOfferDetails}
 
-            if bassOffer.bassAccepted == 'Yes' && bassAddress.bassArea && bassAddress.addressLine1
+            if bassOffer.bassAccepted === 'Yes' && bassAddress.bassArea && bassAddress.addressLine1
                 div.pure-u-1.pure-u-md-1-3.paddingTop
                     span Bass offer area
                 div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferArea
