--- a/server/views/review/includes/bassArea.pug
+++ b/server/views/review/includes/bassArea.pug
@@ -23,11 +23,11 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1.pure-u-md-1-2
             span Is the BASS area suitable?
         div.pure-u-1.pure-u-md-1-2
-            +itemAndError(bassAreaCheck.bassAreaSuitable, errors.bassAreaSuitable, "suitableArea")
+            +itemAndError(bassAreaCheck.bassAreaSuitable, errors.bassAreaSuitable, "bassAreaSuitable")
 
         if bassAreaCheck.bassAreaSuitable === 'No'
             div.pure-u-1.pure-u-md-1-2
                 span Reasons
             div.pure-u-1.pure-u-md-1-2
-                +itemAndError(bassAreaCheck.bassAreaReason, errors.bassAreaReason, "areaReason")
+                +itemAndError(bassAreaCheck.bassAreaReason, errors.bassAreaReason, "bassAreaReason")
 
