--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -3,7 +3,7 @@ include ../proposedAddress/includes/addressDetail
 
 block content
 
-    -var address = data || {}
+    -var address = proposedAddress || {}
 
     div.pure-g.pure-u-1
         div.borderBottomLight
