--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -60,19 +60,19 @@ block content
                                 div.form-group
                                     p Is there an electricity supply?
                                     div.multiple-choice
-                                        input#electricityYes(type="radio" checked=address.electricity === 'Yes' name="electricity" value="Yes")
+                                        input#electricityYes(type="radio" checked=data.electricity === 'Yes' name="electricity" value="Yes")
                                         label(for="electricityYes") Yes
                                     div.multiple-choice
-                                        input#electricityNo(type="radio" checked=address.electricity === 'No' name="electricity" value="No")
+                                        input#electricityNo(type="radio" checked=data.electricity === 'No' name="electricity" value="No")
                                         label(for="electricityNo") No
 
                                 div.form-group
                                     p Did you do a home visit?
                                     div.multiple-choice
-                                        input#homeVisitConductedYes(type="radio" checked=address.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
+                                        input#homeVisitConductedYes(type="radio" checked=data.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
                                         label(for="homeVisitConductedYes") Yes
                                     div.multiple-choice
-                                        input#homeVisitConductedNo(type="radio" checked=address.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
+                                        input#homeVisitConductedNo(type="radio" checked=data.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
                                         label(for="homeVisitConductedNo") No
 
                     div.form-group
