--- a/server/views/taskList/tasks/caSubmitBassReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitBassReviewTask.pug
@@ -4,13 +4,18 @@ div.largeMarginBottom
 
     div.pure-g
 
-        div.pure-u-1.pure-u-md-3-4
-            if ['STARTED', 'DONE'].includes(licenceStatus.tasks.bassRequest)
-                | Ready to submit
-            else
-                | Not completed
+        if licenceStatus.decisions.optedOut
+            div.pure-u-1.pure-u-md-3-4
+                | Submission unavailable - Offender has opted out of HDC
 
-        div.pure-u-1.pure-u-md-1-4.center
-            if ['STARTED', 'DONE'].includes(licenceStatus.tasks.bassRequest)
-                -var path = '/hdc/review/bassRequest/' + prisonerInfo.bookingId
-                +continue(path)
+        else
+            div.pure-u-1.pure-u-md-3-4
+                if ['STARTED', 'DONE'].includes(licenceStatus.tasks.bassRequest)
+                    | Ready to submit
+                else
+                    | Not completed
+
+            div.pure-u-1.pure-u-md-1-4.center
+                if ['STARTED', 'DONE'].includes(licenceStatus.tasks.bassRequest)
+                    -var path = '/hdc/review/bassRequest/' + prisonerInfo.bookingId
+                    +continue(path)
