--- a/server/views/taskList/tasks/caSubmitRefusalTask.pug
+++ b/server/views/taskList/tasks/caSubmitRefusalTask.pug
@@ -2,9 +2,15 @@ div.largeMarginBottom
     h2.heading-medium Submit to decision maker
 
     div.pure-g
-        div.pure-u-1.pure-u-md-3-4
-            | Ready to submit for refusal
 
-        div.pure-u-1.pure-u-md-1-4.center
-            -var path = '/hdc/send/refusal/' + prisonerInfo.bookingId
-            +continue(path)
+        if licenceStatus.decisions.optedOut
+            div.pure-u-1.pure-u-md-3-4
+                | Submission unavailable - Offender has opted out of HDC
+
+        else
+            div.pure-u-1.pure-u-md-3-4
+                | Ready to submit for refusal
+
+            div.pure-u-1.pure-u-md-1-4.center
+                -var path = '/hdc/send/refusal/' + prisonerInfo.bookingId
+                +continue(path)
