changed wording for hdcad in prisoner details

--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -65,7 +65,7 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
 
         if (sentenceDetail.homeDetentionCurfewActualDate)
             div.midMarginBottom
-                | HDC actual date
+                | HDC approved date
                 span#prisonerHdcad.block.bold  #{sentenceDetail.homeDetentionCurfewActualDate}
 
         if (sentenceDetail.sentenceExpiryDate && sentenceDetail.sentenceExpiryDate !== 'Invalid date')
