--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -9,7 +9,7 @@ block content
         div.pure-u-1
             div(class= user.role === 'RO' ? "pure-g paddingTop" : "pure-g xlargePaddingTop")
                 div.pure-u-1.pure-u-md-1-2
-                    h2.heading-medium.noMargin Case list
+                    h2.heading-large.noMargin Case list
                 div.pure-u-1.pure-u-md-1-2.form-group
                     input.front-end-control.form-control(type="text" id="caseListFilter" placeholder="Search your case list" title="Filter the case list by text content")
 
