--- a/server/views/user/admin.pug
+++ b/server/views/user/admin.pug
@@ -25,7 +25,7 @@ block content
                             td Active case load
                             td #{user.activeCaseLoad.description}
 
-    if allRoles.lengthinde > 1 || allCaseLoads.length > 1
+    if allRoles.length > 1 || allCaseLoads.length > 1
 
         form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
