--- a/server/views/taskList/roTasks.pug
+++ b/server/views/taskList/roTasks.pug
@@ -13,6 +13,9 @@ block tasks
             include tasks/riskManagementTask
 
         div.taskListItem.borderBottomLight
+            include tasks/victimLiaisonTask
+
+        div.taskListItem.borderBottomLight
             include tasks/curfewHoursTask
 
         div.taskListItem.borderBottomLight
