--- a/server/views/taskList/tasks/riskManagementTask.pug
+++ b/server/views/taskList/tasks/riskManagementTask.pug
@@ -1,9 +1,8 @@
 div.paddingBottom
-    h2.heading-medium Risk management and victim liaison
+    h2.heading-medium Risk management
 
     - var alertBoxNeeded = licenceStatus.decisions.awaitingRiskInformation
     - var riskText = licenceStatus.decisions.riskManagementNeeded ? 'Risk management required' : 'No risks'
-    - var victimLiasionText = licenceStatus.decisions.victimLiasionNeeded ? 'Victim liaison required' : 'No victim liaison required'
 
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
@@ -20,7 +19,6 @@ div.paddingBottom
 
                 else
                     div #{riskText}
-                    div #{victimLiasionText}
 
             else
                 | Not completed
