--- a/server/views/taskList/caTasksFinalChecks.pug
+++ b/server/views/taskList/caTasksFinalChecks.pug
@@ -17,6 +17,9 @@ block tasks
             include tasks/riskManagementTask
 
         div.taskListItem.borderBottomLight
+            include tasks/victimLiaisonTask
+
+        div.taskListItem.borderBottomLight
             include tasks/curfewHoursTask
 
         div.taskListItem.borderBottomLight
