--- a/server/views/taskList/caTasksPostApproval.pug
+++ b/server/views/taskList/caTasksPostApproval.pug
@@ -25,6 +25,9 @@ block tasks
                 include tasks/riskManagementTask
 
             div.taskListItem.borderBottomLight
+                include tasks/victimLiaisonTask
+
+            div.taskListItem.borderBottomLight
                 include tasks/curfewHoursTask
 
             div.taskListItem.borderBottomLight
